🔮fixed backface visibility🔮

--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ min-height: 100%;
 }
 body{
 background-image: radial-gradient(
-    circle, #ffd300, #ef8d22, #c65035, #892137, #460329
-    );
+circle, #ffd300, #ef8d22, #c65035, #892137, #460329
+);
 }
 .card-back img{
 width: 100%;
@@ -17,15 +17,15 @@ height: 100%;
 border-radius: 10px;
 }
 .card__inner__img--size img{
-    max-width: 100%;
-   height: 100%;
+max-width: 100%;
+height: 100%;
 
 }
 .container{
-  margin: 20px 0;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+margin: 20px 0;
+display: flex;
+justify-content: center;
+flex-wrap: wrap;
 }
 .card{
 position: relative;
@@ -58,12 +58,20 @@ transform: rotateY(-180deg);
 position: absolute;
 width: 100%;
 height: 100%;
-backface-visibility: hidden;
+backface-visibility: visible;
 background-color: #fff;
 font-size: 1.6rem;
 border-radius: 10px;
 transform: rotateY(180deg);
 }
+.card-back{
+position: absolute;
+width: 100%;
+height: 100%;
+backface-visibility: hidden;
+}
+
+
 .card-front::before,
 .card-front::after{
 content: attr(value);
@@ -94,15 +102,15 @@ content: attr(value) ' ♥';
 }
 .card-front--spade::before,
 .card-front--spade::after{
-    content: attr(value) ' ♠';
+content: attr(value) ' ♠';
 }
 .card-front--diamond::before,
 .card-front--diamond::after{
-    content: attr(value) ' ♦';
+content: attr(value) ' ♦';
 }
 .card-front--clubs::before,
 .card-front--clubs::after{
-    content: attr(value) ' ♣';
+content: attr(value) ' ♣';
 }
 
 .card__inner{
@@ -148,8 +156,8 @@ content: "♣";
 }
 
 .card__symbol-heart--ace-card::before{
-    content: "♥";
-    font-size: 90px;
+content: "♥";
+font-size: 90px;
 }
 
 
@@ -166,13 +174,5 @@ flex-basis: calc(0.45 * 240px)
 }
 .card__symbol--big{
 flex-basis: calc(0.25 * 240px)
-}
-
-.card-back{
-position: absolute;
-width: 100%;
-height: 100%;
-backface-visibility: hidden;
-
 }
 
